8183962: JVM_DoPrivileged does not find run method in default methods

Add search of interfaces for run() method.

Reviewed-by: acorn, gtriantafill